--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,12 +3,24 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --primary: #3c7269;
+  /* --primary: #3c7269; */
+  --primary: #325f57;
   --primary-light: #96bab3;
   --primary-dark: #2a514a;
   --secondary: #b07e50;
   --secondary-light: #d4b18c;
   --secondary-dark: #8c6540;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 @theme inline {
