adding more things

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   --background: #ffffff;
   --foreground: #171717;
   /* --primary: #3c7269; */
-  --primary: #325f57;
+  --primary: #274e47;
   --primary-light: #96bab3;
   --primary-dark: #2a514a;
   --secondary: #b07e50;
